# eBayAPI

./: .gitignore  pyproject.toml
ebayapi/: LICENSE  README.md  __init__.py  ebayapi.py  test_ebayapi.py
getRefresh_token/: calculate_expiry.py  capture_code.py  exchange_code.py  readme.md
tests/: sample_item_Fine.json  test_marketing.py  test_send_message.py  test_shipping_tracking.ipynb  test_shipping_tracking.py  test_trans.py
